tests/NormalTests/paczka1/fuzzy1/55755140.err
Error in line 4: UqbRk9T A525 38,2
Error in line 6: UqbRk9T S703 74,7
Error in line 9: lN9 A272 17,8
Error in line 34: S703 A272 12,3
Error in line 35: UqbRk9T A272 58,0
